--- a/.github/workflows/0-welcome.yml
+++ b/.github/workflows/0-welcome.yml
@@ -130,4 +130,4 @@ jobs:
 
     - name: 実行
 
-      run: python3 start.py MCPE live.tsubasaru.f5.si:19132 500 1000
+      run: python3 start.py MCPE 60.109.5.225:19132 500 1000
